# stargazing-on-the-run

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  Making maps.ipynb  QUESTIONS.md  README.md  ROADMAP.md  TODO.md  create_stellarium_script.py  merge_images.py  pyproject.toml  requirements.txt
.github/workflows/: format.yml  lint.yaml
data/: .gitignore  Morning_Run.gpx
data/content/: constellations.yaml
data/samples/: sample_night_run.gpx
docs/: architecture.md  usage.md
jupyter_notebooks/: Making maps.ipynb
script/: script.ssc
scripts/: bright_stars.py  create-scripts.py  create_scripts.py  create_stellarium_script.py  gpx.py  make-maps.py  make_maps.py  merge.py  merge_images.py  profile.py  sky.py  sky_index.py  sky_log.py  tonight.py  utils.py
tests/: test_gpx_input.py  test_profile.py  test_sky.py  test_sky_log.py  test_tonight.py  test_utils.py
tmp/: StellariumScript.ssc
