[project]
name = "stargazing-on-the-run"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "gpxpy",
    "matplotlib",
    "numpy",
    "contextily",
    "pillow",
    "pyproj",
    "timezonefinder",
    "pytz",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv]
package = false


[tool.ruff]
line-length = 99
target-version = "py311"


[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM", "RET", "S"]
ignore = ["E501", "B008", "S101"]


[tool.ruff.format]
quote-style = "double"


[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
